--- a/fortune/views/fortune.hbs
+++ b/fortune/views/fortune.hbs
@@ -17,8 +17,7 @@
 	<body class="center-it">
 		<code class="fortune-text">
 			{{ text }}
-			Hello
+			This is an extra line.
 		</code>
-		hello
 	</body>
 </html>
